--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 		<org.aspectj-version>1.6.10</org.aspectj-version>
 		<org.slf4j-version>1.6.6</org.slf4j-version>
 		<sitemesh.version>3.0-alpha-2</sitemesh.version>
+		<spring-security.version>3.1.0.RELEASE</spring-security.version>
 	</properties>
 	<dependencies>
 		<!-- Spring -->
@@ -145,6 +146,22 @@
 	<version>1.0-alpha-7</version>
 </dependency> 
 	
+	<!-- Spring Security Dependencies -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>${spring-security.version}</version>
+         </dependency>
+         <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${spring-security.version}</version>
+          </dependency>
+          <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${spring-security.version}</version>
+          </dependency>
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
