--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,7 +2,8 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>/WEB-INF/spring/root-context.xml</param-value>
+    <param-value>/WEB-INF/spring/root-context.xml,
+		/WEB-INF/spring-security.xml</param-value>
   </context-param>
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -28,4 +29,17 @@
     <filter-name>sitemesh</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+  <filter>
+<filter-name>springSecurityFilterChain</filter-name>
+<filter-class>
+org.springframework.web.filter.DelegatingFilterProxy
+</filter-class>
+</filter>
+
+ <filter-mapping>
+      <filter-name>springSecurityFilterChain</filter-name>
+      <url-pattern>/secured/*</url-pattern>
+    </filter-mapping>
+   
+
 </web-app>
