--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -38,7 +38,7 @@ org.springframework.web.filter.DelegatingFilterProxy
 
  <filter-mapping>
       <filter-name>springSecurityFilterChain</filter-name>
-      <url-pattern>/secured/*</url-pattern>
+      <url-pattern>/*</url-pattern>
     </filter-mapping>
    
 
