--- a/pom.xml
+++ b/pom.xml
@@ -168,7 +168,12 @@
 			<artifactId>junit</artifactId>
 			<version>4.7</version>
 			<scope>test</scope>
-		</dependency>        
+		</dependency>   
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version></version>
+        </dependency>     
 	</dependencies>
     <build>
         <plugins>
