--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
 
 	<display-name>Sample Spring Maven Project</display-name>
 <!-- Spring MVC -->  
-  
+  <!-- Spring MVC -->
     <servlet>  
         <servlet-name>mvc-dispatcher</servlet-name>  
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>  
