--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,5 +1,5 @@
 database.driver=com.mysql.jdbc.Driver
-database.url=jdbc:mysql://localhost:3306/spring_social_db
+database.url=jdbc:mysql://localhost:3306/softUserDB
 database.user=root
 database.password=ruby
 hibernate.show_sql=true
