--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,6 +1,6 @@
 database.driver=com.mysql.jdbc.Driver
 database.url=jdbc:mysql://localhost:3306/softUserDB
 database.user=root
-database.password=root
+database.password=ruby
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=create-drop
